java.lang.ref.Reference processing total time logging broken

XMLWordPrintable

    • gc
    • b11

      There is currently no output of total time taken of the discovered java.lang.ref.References phase in any GC.

      There is a "Reference processing" entry in G1 young collections, but it contains the time to process the VM internal weak references, not the j.l.ref.References one, which is called "Weak Processing" in the other collectors.

      Fix "Reference Processing" timing and add "Weak Processing" for the VM internal references.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: