8201596: java.lang.ref.Reference processing total time logging broken

Fix "Reference Processing" and add "Weak Processing" time

Reviewed-by: kbarrett, sangheki